--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
     "@astrojs/check": "^0.9.2",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
+    "@nanostores/react": "^0.7.3",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.13.4",
     "flowbite": "^2.5.1",
+    "flowbite-react": "^0.10.1",
+    "leaflet": "^1.9.4",
+    "nanostores": "^0.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.12"
   }
 }
