--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.9.2",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.8.0",
     "@nanostores/react": "^0.7.3",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
